@@ -1,5 +1,7 @@
 2002-08-23  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* usecode/ucinternal.h: Fixed "in_usecode()" so it works with new
+	stack-frames. 
 	* usecode/ucsched.cc (Usecode_script): Don't purge script if it
 	has already started.
 
